3822B1PE2/2_gelu_cuda/strakhov_andrey/log.txt
/home/crazyproger/sandbox/gpu-2025/3822B1PE2/2_gelu_cuda/strakhov_andrey/gelu_cuda.cu(6): error: expected an identifier
           3.14159265358979323846 
           ^

1 error detected in the compilation of "/home/crazyproger/sandbox/gpu-2025/3822B1PE2/2_gelu_cuda/strakhov_andrey/gelu_cuda.cu".
